--- a/app/src/main/res/layout/get_code.xml
+++ b/app/src/main/res/layout/get_code.xml
@@ -1,44 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
+    android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="120dp"
-        android:layout_margin="5dp"
-        android:src="@drawable/icon"
+        android:layout_height="120dp"
         android:layout_gravity="center"
-        android:layout_height="120dp" />
+        android:layout_margin="5dp"
+        android:src="@drawable/icon" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:id="@+id/writeId"
-        android:textColor="@android:color/holo_orange_dark"
-        android:textSize="20sp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:text="GET PIN CODE USER"
-        android:layout_height="wrap_content" />
+        android:textColor="@android:color/holo_orange_dark"
+        android:textSize="20sp" />
 
     <EditText
+        android:id="@+id/writeId"
         android:layout_width="120dp"
-        android:layout_margin="3dp"
-        android:src="@drawable/fingerprint"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_height="wrap_content" />
+        android:layout_margin="3dp"
+        android:gravity="center"
+        android:maxLength="4" />
 
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_margin="10dp"
-        android:text="FINISH"
-        android:textColor="@android:color/white"
-        android:paddingStart="8dp"
         android:id="@+id/finish"
-        android:paddingEnd="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_margin="10dp"
         android:background="@android:color/holo_orange_dark"
-        android:layout_height="wrap_content" />
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
+        android:text="FINISH"
+        android:textColor="@android:color/white" />
 </LinearLayout>
